# Smart-Brightness

./: .SRCINFO  Cargo.toml  PKGBUILD  README.md  config.toml  install.sh  sample-config.toml  smart-brightnessd.service  test_daemon_modes.sh
docs/: configuration.md
pkg/smart-brightness/: .BUILDINFO  .MTREE  .PKGINFO
src/: backlight.rs  calibrate.rs  camera.rs  config.rs  display.rs  logging.rs  main.rs  smooth_transition.rs  smoothing.rs  time_adjust.rs  tui.rs
