[package]
name = "smart-brightness"
version = "0.3.0"
edition = "2024"
authors = ["Hardik Dubey aka CodeByHardik"]
description = "Automatic screen brightness adjustment based on ambient light"
license = "MIT"
repository = "https://github.com/CodeByHardik/Smart-Brightness"

[dependencies]
log = "0.4"
simplelog = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
clap = { version = "4.0", features = ["derive"] }
ctrlc = { version = "3.2", features = ["termination"] }
nix = "0.26"
v4l = "0.14"

chrono = "0.4"
dirs = "5.0"
thiserror = "1.0"
anyhow = "1.0"
flate2 = "1.1.5"
tar = "0.4.44"
ratatui = "0.26"
crossterm = "0.27"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
